# FastAPI_authenticated_todoList

./: .env  README.md  docker-compose.yml
backend/dockerfiles/: Dockerfile
backend/poetry/: pyproject.toml
backend/src/: main.py
deployment/backend/dockerfiles/: Dockerfile
