[tool.poetry]
name = "fastapi-todo-auth"
version = "0.1.0"
description = "FastAPI ToDo API with JWT & OAuth and PostgreSQL"
authors = ["you <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"

# Web/API
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
python-multipart = "^0.0.9"

# DB/ORM (Async)
SQLAlchemy = "^2.0.30"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.5.2"

# Auth (JWT/OAuth)
python-jose = "^3.3.0"              # JWT（HS256等）
passlib = { version = "^1.7.4", extras = ["bcrypt"] }  # パスワードハッシュ
bcrypt = "^4.1.2"
authlib = "^1.3.0"                  # 外部OAuth（Google等）
email-validator = "^2.2.0"          # 任意：メールバリデーション

# Test/Tools
httpx = "^0.27.0"                   # APIクライアント（UTで使用）
anyio = "^4.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
ruff = "^0.5.0"
mypy = "^1.10.0"
types-passlib = "^1.7.7.20240819"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
